--- a/Solution3/PresentationWebApp/appsettings.Production.json
+++ b/Solution3/PresentationWebApp/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql5101.site4now.net;Database=DB_A6D65E_JanisKlavins;User Id=DB_A6D65E_JanisKlavins_admin;Password=;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=sql5101.site4now.net;Database=DB_A6D65E_JanisKlavins;User Id=DB_A6D65E_JanisKlavins_admin;Password=kiki9876;MultipleActiveResultSets=true"
   }
 }
